# execution-constraint-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
examples/: README.md  basic_enforcement.py  fallback_mode.py  looping_with_ece.py  looping_without_ece_observation_mode.py  multi_agent_with_ece.py  multi_agent_without_ece.py  observation_mode.py
veloryn/: __init__.py  config.py  cost.py  enforcer.py  execute.py  guard.py  logger.py  logger_local.py  rules.py  storage.py  tracker.py
