[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "veloryn"
version = "0.1.2"
description = "Deterministic cost-bounded execution for multi-step LLM workflows"

readme = "README_PYPI.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    { name = "Veloryn Intelligence" }
]

requires-python = ">=3.9"

dependencies = []

[project.urls]
Homepage = "https://github.com/veloryn-intel/execution-constraint-engine"
Source = "https://github.com/veloryn-intel/execution-constraint-engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["veloryn"]
